# irc-leptos

./: .gitignore  Cargo.toml  index.html
src/: fetch_rates.rs  lib.rs  local_storage.rs  main.rs
