[package]
name = "irc-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.1", features = ["csr", "nightly"] }
web-sys = { features = ["Storage", "AbortController", "AbortSignal"] }
evalexpr = "11.1.0"
serde = { version = "1", features = ["derive"] }
gloo-net = { version = "0.2", features = ["http"] }
